--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-json-viewer": "^2.2.21",
