--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "bin-code-editor": "^0.9.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "mavon-editor": "^2.10.4",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
-    "vue-json-viewer": "^2.2.21",
-    "vue-router": "^3.2.0"
+    "vue-json-ui-editor": "^1.0.0",
+    "vue-json-viewer": "^2.2.22",
+    "vue-router": "^3.2.0",
+    "vue3-ace-editor": "^2.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
