--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vue-json-ui-editor": "^1.0.0",
     "vue-json-viewer": "^2.2.22",
     "vue-router": "^3.2.0",
-    "vue3-ace-editor": "^2.2.2"
+    "vue3-ace-editor": "^2.2.2",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
