--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^3.2.3",
     "axios": "^0.21.4",
     "bin-code-editor": "^0.9.0",
     "core-js": "^3.6.5",
