--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.21.4",
     "bin-code-editor": "^0.9.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.6",
     "mavon-editor": "^2.10.4",
     "moment": "^2.29.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-json-ui-editor": "^1.0.0",
